nio_parser/tests/snapshots/parse@int_lit.nio.snap
---
source: crates/parser/tests/parser.rs
assertion_line: 11
expression: "&result"
input_file: crates/parser/tests/inputs/int_lit.nio

---
Ok(
    Program {
        statements: [
            Expr(
                IntLit(
                    "123",
                ),
            ),
        ],
    },
)
