nio_parser/tests/snapshots/parse@string_lit.nio.snap
---
source: nio_parser/tests/parser.rs
expression: "&result"
input_file: nio_parser/tests/inputs/string_lit.nio
---
Ok(
    Program {
        statements: [
            Expr(
                StringLit(
                    "hello",
                ),
            ),
        ],
    },
)
